# jantu

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  bench-history.csv
benches/: benchmarks.rs
docs/architecture/: overview.md
docs/development/: roadmap.md
docs/guides/: usage.md
examples/: basic.rs  breeding.rs  ecosystem.rs  social_group.rs
src/: bridge.rs  circadian.rs  coevolution.rs  contagion.rs  error.rs  foraging.rs  gametheory.rs  genetics.rs  habituation.rs  instinct.rs  kin.rs  landscape.rs  lib.rs  lifecycle.rs  logging.rs  mating.rs  memory.rs  migration.rs  pack.rs  signals.rs  social.rs  stress.rs  survival.rs  swarm.rs  territory.rs
src/integration/: soorat.rs
tests/: integration.rs
