[package]
name = "jantu"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Jantu — ethology and creature behavior engine for instinct, survival, social dynamics, and swarm intelligence"
homepage = "https://github.com/MacCracken/jantu"
repository = "https://github.com/MacCracken/jantu"
readme = "README.md"
documentation = "https://docs.rs/jantu"
keywords = ["ethology", "behavior", "instinct", "swarm", "creatures"]
categories = ["science", "simulation", "game-engines"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[features]
default = []
logging = ["dep:tracing-subscriber"]
personality = ["dep:bhava"]

[dependencies]
hisab = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
bhava = { version = "1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name = "benchmarks"
harness = false
